--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <h2>Hello bro</h2>
     <h3>How are you?</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, praesentium omnis. Quae necessitatibus et exercitationem fuga optio adipisci aspernatur ipsa, dicta quod accusantium nulla corporis asperiores dignissimos non ipsum ea!</p>
+    <h3>Bangladesh</h3>
+    <h3>India</h3>
+    <h3>Pakistan</h3>
 </body>
 </html>
