--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>This is my second repositoryh2</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h2>Hello bro</h2>
@@ -12,5 +13,8 @@
     <h3>Bangladesh</h3>
     <h3>India</h3>
     <h3>Pakistan</h3>
+    <h3>vatar</h3>
+    <img src="images/rintukazi.jpg" alt="">
+
 </body>
 </html>
